[package]
name = "msg-transmitter"
version = "0.1.0"
authors = ["ChijinZ <tlock.chijin@gmail.com>"]

[[example]]
name = "simple_connection"
path = "examples/simple_connection.rs"

[dependencies]
tokio = "0.1"
bytes = "0.4"
futures = "0.1"
serde = "1.0"
serde_derive = "1.0"
bincode = "1.0"
tokio-codec = "0.1.0"