[package]
name = "msg-transmitter"
version = "0.1.0"
authors = ["ChijinZ <tlock.chijin@gmail.com>"]
exclude = [".idea/*"]
description = "A tcp-based, single-server-multiple-clients model with the Rust programming language."
license = "MIT"

[[example]]
name = "simple_connection"
path = "examples/simple_connection.rs"

[[example]]
name = "transmit_multiple_struct"
path = "examples/transmit_multiple_struct.rs"

[dependencies]
tokio = "0.1"
bytes = "0.4"
futures = "0.1"
serde = "1.0"
serde_derive = "1.0"
bincode = "1.0"
tokio-codec = "0.1.0"